# ai-mentor

./: .gitignore  CLAUDE.md  README.md
.github/workflows/: build-and-deploy.yaml
backend/agent/: Dockerfile  README_NEW.md  TEST_RAG_FRONTEND.md  agent.md  build.sh  deploy.sh  docker-compose.yml  env.example  makefile  pyproject.toml  uv.toml
backend/agent/alembic/: env.py
backend/agent/alembic/versions/: 7b661154ce6f_add_message_debug_persistence_columns.py  a2284347cd88_initial_migration.py  c3f5840a1b2e_add_supabase_auth_and_owner_id.py  dfb60e1f20bf_add_pgvector_and_document_tables.py
backend/agent/chatbot/: agent.py  app.py  config.py  database.py  dependencies.py  models.py  router.tsx
backend/agent/chatbot/auth/: __init__.py  dependencies.py  jwt.py  schemas.py
backend/agent/chatbot/examples/: docs.md  reducto.md  research_recommendations.md  scrapper-inspo.py
backend/agent/chatbot/repositories/: __init__.py  base.py  conversation.py  message.py  user.py
backend/agent/chatbot/routers/: __init__.py  ai_chat.py  chat.py  conversations.py  documents.py  messages.py  users.py
backend/agent/chatbot/schemas/: __init__.py  chat.py  conversation.py  message.py  user.py
backend/agent/chatbot/services/: __init__.py  ai_chat.py  chat.py  conversation.py  embedding.py  ingestion.py  message.py  reducto.py  retrieval.py  user.py
backend/agent/docs/: API_EXAMPLES.md  ARCHITECTURE_GUIDE.md  DATABASE_SETUP.md  QUICK_REFERENCE.md
backend/agent/scripts/: ingest_test_document.py  init_db.py  pg-essays.py
backend/agent/terraform/: .terraform.lock.hcl  backend.tf  locals.tf  main.tf  variables.tf
backend/agent/terraform/docs/: DEPLOY_ENV.md  TERRAFORM_ARCHITECTURE_GUIDE.md
backend/agent/terraform/module/acm/: main.tf
backend/agent/terraform/module/cluster/: distribution.tf  main.tf  variables.tf
backend/agent/terraform/module/environment/: main.tf  variables.tf
backend/agent/terraform/module/network/: locals.tf  main.tf  outputs.tf  security_group.tf
backend/agent/testing/: curl_commands.txt  test_api.sh
backend/agent/tests/: test_ai_chat_router.py  test_ai_chat_serializer.py  test_ai_chat_service.py  test_ai_chat_stream_ids.py  test_message_service_client_ids.py
frontend/: CLAUDE.md  README.md  agent.md  amplify.yml  index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  Chat.tsx  config.ts  main.tsx  router.tsx
frontend/src/components/: app-sidebar.tsx
(+9 files in other folders)
