[project]
name = "logfire-docs-chatbot"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "beautifulsoup4>=4.14.2",
    "bs4>=0.0.2",
    "email-validator>=2.2.0",
    "fastapi>=0.118.0",
    "lancedb>=0.25.0",
    "langchain-text-splitters>=0.3.11",
    "logfire[fastapi]>=4.9.0",
    "markdown2>=2.5.4",
    "pgvector>=0.3.0",
    "pip>=25.2",
    "psycopg2-binary>=2.9.9",
    "pydantic-ai-slim[anthropic,google,openai]>=1.22.0",
    "pydantic-settings>=2.6.0",
    "pyright>=1.1.405",
    "python-dotenv>=1.0.0",
    "python-frontmatter>=1.1.0",
    "reductoai>=0.14.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "sse-starlette>=3.0.2",
    "starlette>=0.48.0",
    "uvicorn>=0.37.0",
    "voyageai>=0.3.0",
    "watchfiles>=1.1.0",
    "playwright>=1.49.0",
    "python-multipart>=0.0.20",
    "PyJWT[crypto]>=2.8.0",
    "httpx>=0.27.0",
    "opentelemetry-sdk>=1.20.0",
]

[dependency-groups]
dev = [
    # "haystack-ai",
]

[tool.setuptools.packages.find]
include = ["chatbot*"]
exclude = ["testing*", "alembic*"]

[tool.ruff.format]
# don't format python in docstrings, pytest-examples takes care of it
docstring-code-format = false
quote-style = "single"

[tool.uv.sources]
# haystack-ai = { path = "../../../evals-agent/sdk/python", editable = true }
